@@ -6,6 +6,8 @@ Revision history for SPVM
         * Add dynamic_lib to SPVM::Builder::Config::Exe
         * Add static_lib to SPVM::Builder::Config::Exe
         * Improve resource system. Don't use ar command.
+        * Add to_string method to Point class.
+        * Point class has Stringable interface.
         
         [NON BACKWORD COMPATIBLE CHANGES]
         * Remove -O|--optimize option from spvmcc.
